# tree-sitter-hare

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  Makefile  Package.swift  README.md  REUSE.toml  grammar.js  package.json  pyproject.toml  setup.py
LICENSES/: MIT.txt
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: primitive_types.txt  use_directive.txt
