# Copyright 2024 Masanori Ogino
# SPDX-License-Identifier: MIT

[package]
name = "tree-sitter-hare"
description = "Hare grammar for tree-sitter"
version = "0.1.0"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "hare"]
categories = ["parsing", "text-editors"]
repository = "https://git.sr.ht/~omasanori/tree-sitter-hare"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.0.87"
